# umicp

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  README_BACKUP.md
bindings/rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
bindings/rust/examples/: advanced_matrix_ops.rs  basic_envelope.rs  embedding_communication.rs  error_handling.rs  matrix_operations.rs  real_time_processing.rs  websocket_transport.rs
bindings/rust/src/: envelope.rs  error.rs  lib.rs  matrix.rs  transport.rs  types.rs  utils.rs
bindings/rust/tests/: integration_tests.rs
bindings/typescript/: .gitignore  CHANGELOG.md  README.md  binding.gyp  jest.config.js  package-lock.json  package.json  tsconfig.json
bindings/typescript/.github/workflows/: ci.yml
bindings/typescript/examples/: basic-usage.ts  benchmark.js  embedding-communication.ts  federated-learning.ts  financial-transactions.ts  iot-streaming.ts  simple-binding-test.ts  transport-example.ts
bindings/typescript/src/: envelope_wrap.cc  envelope_wrap.h  frame_wrap.cc  frame_wrap.h  http2_wrap.cc  http2_wrap.h  index.ts  matrix_wrap.cc  matrix_wrap.h  umicp_core.cc  websocket_wrap.cc  websocket_wrap.h
bindings/typescript/test/: .testrc.json  e2e.test.ts  embedding-communication.test.ts  envelope.test.ts  integration.test.ts  load.test.ts  matrix.test.ts  performance-extended.test.ts  regression.test.ts  s2s.test.ts  security.test.ts  setup.ts  stress-advanced.test.ts  websocket-transport.test.ts
cpp/: CHANGELOG.md  CMakeLists.txt  README.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_REPORT_UPDATED.md  UMICPConfig.cmake.in  WEBSOCKET_README.md  install_dependencies.sh  umicp.pc.in
cpp/examples/: CMakeLists.txt  advanced_features_demo.cpp  basic_example.cpp  comprehensive_test.cpp  embedding_communication.cpp  enhanced_comprehensive_test.cpp  financial_processor.cpp  iot_data_processor.cpp  machine_learning_demo.cpp  simple_comprehensive_test  simple_comprehensive_test.cpp  simple_test  simple_test.cpp  websocket_example.cpp  websocket_server.cpp
cpp/include/: buffer.h  compression.h  config.h  envelope.h  frame.h  matrix_ops.h  protocol.h  schema_registry.h  security.h  serialization.h  transport.h  umicp.h  umicp_types.h
cpp/src/: buffer.cpp  c_api.cpp  compression.cpp  config.cpp  envelope.cpp  frame.cpp  matrix_ops.cpp  protocol.cpp  schema_registry.cpp  security.cpp  serialization.cpp  transport.cpp
cpp/tests/: CMakeLists.txt  Makefile  README.md  matrix_test_simple  matrix_test_simple.cpp  serialization_test_simple  serialization_test_simple.cpp  simple_test  simple_test.cpp  test_main.cpp
cpp/tests/integration/: test_bindings_integration.cpp  test_protocol_integration.cpp  test_real_world_scenarios.cpp  test_s2s_transport.cpp
cpp/tests/performance/: test_matrix_performance.cpp  test_transport_performance.cpp
cpp/tests/stress/: test_stress_comprehensive.cpp
cpp/tests/unit/: test_concurrency_comprehensive.cpp  test_edge_cases_comprehensive.cpp  test_error_conditions.cpp  test_matrix_ops.cpp  test_matrix_ops_edge_cases.cpp  test_memory_management.cpp  test_multi_transport_integration.cpp  test_protocol.cpp  test_security.cpp  test_serialization.cpp  test_ssl_compression.cpp  test_transport.cpp
cpp/tests/utils/: test_helpers.cpp  test_helpers.h
docs/: README.md  build-simple.js  dgeni.config.js  package.json
docs/api/: index.html
docs/api/assets/css/: docs.css
docs/api/assets/js/: docs.js
docs/api/guides/: installation.html  protocol-api.html
docs/guides/: installation.md  protocol-api.md  rust-bindings.md  testing-e2e.md  typescript-bindings.md
docs/templates/: api-index.template.html  class.template.html
scripts/: build-bindings.sh
